--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+.env
+ 
 # compiled output
+
 /dist
 /node_modules
 
@@ -33,3 +36,5 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.env
+.env
