--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.2.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
