init project; set up db configs and MVCs

--- a/.env
+++ b/.env
@@ -1,22 +1,28 @@
-ENVIRONMENT = DEVELOPMENT
+ENVIRONMENT = STAGING
 
-DEVELOPMENT_DB = buzzbite_cron_db
-DEVELOPMENT_USERNAME = postgres
-DEVELOPMENT_PASSWORD = root
-DEVELOPMENT_HOST = localhost
-STAGING_PORT = 5432
+DEVELOPMENT_DB_NAME = buzzbite_cron_db
+DEVELOPMENT_DB_USERNAME = postgres
+DEVELOPMENT_DB_PASSWORD = root
+DEVELOPMENT_DB_HOST = localhost
+DEVELOPMENT_DB_PORT = 5432
 
-STAGING_DB = BuzzBite_staging_db
-STAGING_USERNAME = doadmin
-STAGING_PASSWORD = AVNS_y63vsWXBNCBiJV62l9a
-STAGING_HOST = buzzbite-staging-db-do-user-8387225-0.b.db.ondigitalocean.com
-STAGING_PORT = 25060
+# STAGING_DB_NAME = buzzbite_staging
+# STAGING_DB_USERNAME = app_api_staging
+# STAGING_DB_PASSWORD = AVNS_SGcZzh5NESuRerXtRic
+# STAGING_DB_HOST = buzzbite-staging-db-do-user-8387225-0.b.db.ondigitalocean.com
+# STAGING_DB_PORT = 25060
 
-PRODUCTION_DB = 
-PRODUCTION_USERNAME = 
-PRODUCTION_PASSWORD = 
-PRODUCTION_HOST = 
-PRODUCTION_PORT = 25060
+STAGING_DB_NAME = defaultdb
+STAGING_DB_USERNAME = doadmin
+STAGING_DB_PASSWORD = AVNS_y63vsWXBNCBiJV62l9a
+STAGING_DB_HOST = buzzbite-staging-db-do-user-8387225-0.b.db.ondigitalocean.com
+STAGING_DB_PORT = 25060
+
+PRODUCTION_DB_NAME = 
+PRODUCTION_DB_USERNAME = 
+PRODUCTION_DB_PASSWORD = 
+PRODUCTION_DB_HOST = 
+PRODUCTION_DB_PORT = 25060
 
 
 GOOGLE_APPLICATION_CREDENTIALS =
@@ -26,3 +32,14 @@ BCRYPT_SALT = 10
 
 USE_SSL = true
 SSL_AUTHORIZE = false
+
+
+INSTAGRAM_CLIENT = "503613204191224"
+INSTAGRAM_SECRET = "0cc42cb70403a8c48e7205f67a240884"
+INSTAGRAM_DOMAIN="https://graph.facebook.com"
+INSTAGRAM_REDIRECT = "https://navyfvcub.com/"
+INSTAGRAM_REDIRECT_SETTINGS="${SPA_URL}/influencer/setting/"
+INSTAGRAM_REDIRECT_BU = "https://navyfvcub.com/"
+INSTAGRAM_REDIRECT_SETTINGS_BU ="${SPA_URL}/influencer/setting/"
+# INSTAGRAM_CLIENT = "1488321451663689"
+# INSTAGRAM_SECRET = "d7e0fbd3f6879a0871cb0f9e5e12e85a"
