--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
